feat: add autorizaciones
